--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
+    "ng2-owl-carousel": "^0.1.15",
     "ngx-bootstrap": "^1.7.1",
+    "owl.carousel": "^2.2.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
